# xdg-desktop-portal-lunaris

./: .gitignore  Cargo.toml  E2E.md  LICENSE  README.md
daemon/: Cargo.toml
daemon/src/: document_portal.rs  main.rs  picker_ipc.rs  picker_lifecycle.rs  request.rs  sandbox.rs  state.rs
daemon/src/interfaces/: file_chooser.rs  mod.rs  open_uri.rs  options.rs
picker-ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
picker-ui/src/: app.css  app.html
picker-ui/src-tauri/: Cargo.toml  tauri.conf.json
picker-ui/src-tauri/capabilities/: default.json
picker-ui/src-tauri/src/: fs_commands.rs  ipc_client.rs  lib.rs  main.rs  theme.rs
picker-ui/src/lib/: ipc.ts
picker-ui/src/lib/components/: Breadcrumb.svelte  FileList.svelte  FilterDropdown.svelte  SaveBar.svelte
picker-ui/src/lib/stores/: fileTree.svelte.ts  pickState.svelte.ts
picker-ui/src/lib/types/: protocol.ts
picker-ui/src/routes/: +layout.ts  +page.svelte
protocol/: Cargo.toml
protocol/src/: codec.rs  lib.rs
